# YT_Music_OBS_Widget

./: README.md
frontend/: index.html  viewer.js
frontend/class/: GDMPSettings.js  connector.js  player.js
frontend/styles/: viewer.css
plugin/: CMakeLists.txt
plugin/src/: audio_ws_source.cpp  audio_ws_source.hpp  module.cpp  websocket_server.cpp  websocket_server.hpp
